--- a/BLAZAMGui/UI/Dashboard/Widgets/NewUsersWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/NewUsersWidget.razor
@@ -12,7 +12,7 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        NewUsers = (await Directory.Users.FindNewUsersAsync(14,false)).Where(u => u.CanRead).ToList();
+        NewUsers = (await Directory.Users.FindNewUsersAsync(14,false)).Where(u => u.CanRead).OrderByDescending(u=>u.Created).ToList();
         LoadingData = false;
         await InvokeAsync(StateHasChanged);
     }
