Fix null reference exception trying to detect email on user settings creation

--- a/BLAZAMGui/UI/Settings/ApplicationSettings.razor
+++ b/BLAZAMGui/UI/Settings/ApplicationSettings.razor
@@ -72,6 +72,44 @@
 
     </SettingsField>
 
+    @if (ApplicationInfo.IsUnderIIS || ApplicationInfo.InDebugMode)
+    {
+        <SettingsField Label="@AppLocalization["SSL Certificate"]">
+
+            <MudContainer>
+
+                @if (settings != null && settings.SSLCertificateCipher != null && settings.SSLCertificateCipher.Length > 0)
+                {
+                    <MudImage Class="app-icon" Src="@StaticAssets.ApplicationIconUri" />
+                    <MudTooltip Text="Remove custom icon">
+                        <AppCloseButton OnClick="@(()=>{settings.SSLCertificateCipher=null;})" />
+                    </MudTooltip>
+                }
+            </MudContainer>
+        <MudFileUpload T="IBrowserFile" FilesChanged="LoadCert" Accept=".pem, .key, .crt, .pfx">
+            <ButtonTemplate>
+                <MudButton HtmlTag="label"
+                           Variant="Variant.Filled"
+                           Color="Color.Primary"
+                           StartIcon="@Icons.Material.Filled.CloudUpload">
+                    Upload Certificate
+                </MudButton>
+            </ButtonTemplate>
+        </MudFileUpload>
+    </SettingsField>
+
+    }
+    <MudFileUpload T="IBrowserFile" Accept=".pdf" FilesChanged="((rrec)=>{})" MaximumFileCount="100">
+        <ButtonTemplate>
+            <MudButton HtmlTag="label"
+                       Variant="Variant.Filled"
+                       Color="Color.Primary"
+                       StartIcon="@Icons.Material.Filled.CloudUpload"
+                       >
+                Only .pdf files
+            </MudButton>
+        </ButtonTemplate>
+    </MudFileUpload>
     @*
     <SettingsField Label="@AppLocalization["Myrtille Web Adress"]">
 
@@ -117,6 +155,23 @@
             }
         }
         settings.AppIcon = await e.ToByteArrayAsync(5000000);
+        await Context.SaveChangesAsync();
+        await InvokeAsync(StateHasChanged);
+
+
+    }
+    private async void LoadCert(IBrowserFile e)
+    {
+        byte[] fileBytes;
+        using (var stream = e.OpenReadStream(5000000))
+        {
+            using (var memoryStream = new MemoryStream())
+            {
+                await stream.CopyToAsync(memoryStream);
+                fileBytes = memoryStream.ToArray();
+            }
+        }
+        //settings.AppIcon = await e.ToByteArrayAsync(5000000);
         await Context.SaveChangesAsync();
         await InvokeAsync(StateHasChanged);
 
