--- a/BLAZAMGui/UI/Settings/ApplicationSettings.razor
+++ b/BLAZAMGui/UI/Settings/ApplicationSettings.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Forms;
+@using System.Security.Cryptography.X509Certificates
 @inherits SettingsComponents
 
 
@@ -52,12 +53,13 @@
                     </MudTooltip>
                 }
             </MudContainer>
-            <MudFileUpload T="IBrowserFile" FilesChanged="LoadIcon">
+            <MudFileUpload T="IBrowserFile" FilesChanged="LoadIcon" Accept="image/*">
                 <ButtonTemplate>
                     <MudButton HtmlTag="label"
                                Variant="Variant.Filled"
                                Color="Color.Primary"
-                               StartIcon="@Icons.Material.Filled.CloudUpload">
+                           StartIcon="@Icons.Material.Filled.CloudUpload"
+                           for="@context.Id">
                         Upload Icon
                     </MudButton>
                 </ButtonTemplate>
@@ -76,40 +78,31 @@
     {
         <SettingsField Label="@AppLocalization["SSL Certificate"]">
 
-            <MudContainer>
-
-                @if (settings != null && settings.SSLCertificateCipher != null && settings.SSLCertificateCipher.Length > 0)
-                {
-                    <MudImage Class="app-icon" Src="@StaticAssets.ApplicationIconUri" />
-                    <MudTooltip Text="Remove custom icon">
-                        <AppCloseButton OnClick="@(()=>{settings.SSLCertificateCipher=null;})" />
-                    </MudTooltip>
-                }
-            </MudContainer>
         <MudFileUpload T="IBrowserFile" FilesChanged="LoadCert" Accept=".pem, .key, .crt, .pfx">
             <ButtonTemplate>
                 <MudButton HtmlTag="label"
                            Variant="Variant.Filled"
                            Color="Color.Primary"
-                           StartIcon="@Icons.Material.Filled.CloudUpload">
+                               StartIcon="@Icons.Material.Filled.CloudUpload"
+                               for="@context.Id">
                     Upload Certificate
                 </MudButton>
             </ButtonTemplate>
+                <SelectedTemplate>
+                    @if (context != null)
+                    {
+                        <MudText>@context.Name</MudText>
+                    }
+                    else
+                    {
+                        <MudText>No File</MudText>
+                    }
+                </SelectedTemplate>
         </MudFileUpload>
     </SettingsField>
 
     }
-    <MudFileUpload T="IBrowserFile" Accept=".pdf" FilesChanged="((rrec)=>{})" MaximumFileCount="100">
-        <ButtonTemplate>
-            <MudButton HtmlTag="label"
-                       Variant="Variant.Filled"
-                       Color="Color.Primary"
-                       StartIcon="@Icons.Material.Filled.CloudUpload"
-                       >
-                Only .pdf files
-            </MudButton>
-        </ButtonTemplate>
-    </MudFileUpload>
+
     @*
     <SettingsField Label="@AppLocalization["Myrtille Web Adress"]">
 
@@ -154,8 +147,9 @@
                 fileBytes = memoryStream.ToArray();
             }
         }
+
         settings.AppIcon = await e.ToByteArrayAsync(5000000);
-        await Context.SaveChangesAsync();
+        //await Context.SaveChangesAsync();
         await InvokeAsync(StateHasChanged);
 
 
@@ -171,8 +165,22 @@
                 fileBytes = memoryStream.ToArray();
             }
         }
-        //settings.AppIcon = await e.ToByteArrayAsync(5000000);
-        await Context.SaveChangesAsync();
+        var extension = Path.GetExtension(e.Name);
+        if(extension.Equals(".pfx",StringComparison.InvariantCultureIgnoreCase))
+        {
+           
+        }
+        var cert = new X509Certificate2(fileBytes);
+        if (cert != null)
+        {
+            settings.SSLCertificateCipher = (await e.ToByteArrayAsync(5000000))?.Encrypt();
+
+        }
+        else
+        {
+            SnackBarService.Warning(AppLocalization["Not a valid certificate type."]);
+        }
+        //await Context.SaveChangesAsync();
         await InvokeAsync(StateHasChanged);
 
 
