--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -127,6 +127,7 @@
     {
         MaxResults += 10;
         await GetResults(SearchTerm);
+        await InvokeAsync(StateHasChanged);
     }
 
     [Parameter]
