--- a/BLAZAMGui/UI/Outputs/Jobs/JobStepResultIcon.razor
+++ b/BLAZAMGui/UI/Outputs/Jobs/JobStepResultIcon.razor
@@ -31,7 +31,7 @@ else
         <MudProgressLinear Indeterminate=@(Step.Progress==null) Value="@(Step.Progress.HasValue==true?Step.Progress.Value:0)" Max="100"/>
         @if (Step.Progress != null)
         {
-            <MudText Typo="Typo.caption">@Step.Progress.Value%</MudText>
+            <MudText Typo="Typo.caption">@Step.Progress.Value.Round()%</MudText>
         }
     </MudStack>
         
