--- a/BLAZAMGui/UI/Settings/DatabaseStatus.razor
+++ b/BLAZAMGui/UI/Settings/DatabaseStatus.razor
@@ -1,3 +1,4 @@
+@using System.IO.Compression
 @inherits SettingsComponents
 
 
@@ -21,7 +22,11 @@
     <SettingsField Label="@AppLocalization["Database"]">
         <MudTextField Disabled=true Label="@AppLocalization["Database"]" Value="@Context?.ConnectionString?.Database" />
     </SettingsField>
+        <SettingsField Label="@AppLocalization["Export Database"]">
 
+            <MudButton OnClick="Export" Color="Color.Success">Export</MudButton>
+
+        </SettingsField>
       
 </MudForm>
 @code {
@@ -35,5 +40,29 @@
         LoadingData = false;
         await InvokeAsync(StateHasChanged);
     }
-   
+    void Export()
+    {
+        MemoryStream memoryStream = new MemoryStream();
+
+        IJob exportJob = new Job(AppLocalization["Export Database"], CurrentUser.Username);
+        IJobStep exportData = new JobStep(AppLocalization["Export Data"], (step) =>
+        {
+            Context.Export("export");
+            return true;
+
+        });
+        IJobStep packageData = new JobStep(AppLocalization["Prepare Files"], (step) =>
+    {
+        ZipArchive exportZip = new ZipArchive(memoryStream, ZipArchiveMode.Create);
+        var exportDir = new SystemDirectory("export");
+        exportZip.AddToZip(exportDir, exportDir.Path);
+        memoryStream.SaveTo(new SystemFile("export/" + DatabaseCache.ApplicationSettings.AppName + "-" + DateTime.Now.ToString("yyyy-MM-dd-hh-mm-ss") + ".zip"));
+        return true;
+
+    });
+        exportJob.Steps.Add(exportData);
+        exportJob.Steps.Add(packageData);
+        exportJob.Run();
+        exportJob.ShowJobDetailsDialog(MessageService);
+    }
 }
