--- a/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
+++ b/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
@@ -5,11 +5,13 @@
 <AppPageTitle>Recycle Bin</AppPageTitle>
 
 <MudDataGrid T="IDirectoryEntryAdapter"
-              Virtualize
+             Virtualize=true
              ColumnResizeMode="ResizeMode.Container"
              Class=""
-              Hideable
-              Square
+             Hideable=true
+             @bind-SelectedItems=@selectedEntries
+             Square=true
+             MultiSelection=true
              Items="@deletedObjects"
              Filterable="false"
              SortMode="@SortMode.Multiple"
@@ -51,7 +53,7 @@
 
 
 
-
+    HashSet<IDirectoryEntryAdapter> selectedEntries = new();
 
 
 
@@ -88,8 +90,21 @@
 
         }
     }
+    //TODO stop the confimation message on batch restore
     async Task RestoreSelected()
     {
+        IJob batchRestore = new Job(AppLocalization["Restore"]);
+        foreach (var entry in selectedEntries)
+        {
+            IJobStep restoreEntryStep = new JobStep(AppLocalization["Restore: "] + entry.CanonicalName, async (step) =>
+            {
+                await Restore(entry);
+                return true;
 
+            });
+            batchRestore.Steps.Add(restoreEntryStep);
+        }
+        batchRestore.Run();
+        batchRestore.ShowJobDetailsDialog(MessageService);
     }
 }
