--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -5,33 +5,34 @@
 
 
 
-<EditForm Model="Group">
+    <EditForm Model="Group">
 
 
-    <SetSubHeader>
-        <DirectoryEntryViewHeader DirectoryEntry="@Group"
-                                  OnAssignTo="@(()=>{AssignToModal?.Show();})"
-                                  OnChangeThumbnail="@(()=>{UploadThumbnailModal?.Show();})"
-                                  OnDelete="@DeleteGroup"
-                                  OnMove="@(()=>{MoveToModal?.Show();})"
-                                  OnRename="@(()=>{RenameModal?.Show();})"
-                                  OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
-                                  OnShowHistory="@(()=>{ChangeHistoryModal?.Show();})"
-                                  OnToggleEditMode="@ToggleEditMode" />
-        <MudOverlay Visible="SavingChanges" DarkBackground="false" Absolute="true" />
-    </SetSubHeader>
+        <SetSubHeader>
+            <DirectoryEntryViewHeader EditMode="@EditMode"
+                                      DirectoryEntry="@Group"
+                                      OnAssignTo="@(()=>{AssignToModal?.Show();})"
+                                      OnChangeThumbnail="@(()=>{UploadThumbnailModal?.Show();})"
+                                      OnDelete="@DeleteGroup"
+                                      OnMove="@(()=>{MoveToModal?.Show();})"
+                                      OnRename="@(()=>{RenameModal?.Show();})"
+                                      OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
+                                      OnShowHistory="@(()=>{ChangeHistoryModal?.Show();})"
+                                      OnToggleEditMode="@ToggleEditMode" />
+            <MudOverlay Visible="SavingChanges" DarkBackground="false" Absolute="true" />
+        </SetSubHeader>
 
-    <CascadingValue Value="EditMode">
+        <CascadingValue Value="EditMode">
 
 
-        <AppModal Title=@AppLocalization["Assign To"] @ref=@AssignToModal>
-            <AssignToModalContent OnGroupMembershipChange=@((change)=>{AssignToModal?.Hide(); InvokeAsync(StateHasChanged);}) DirectoryModel="Group" />
-        </AppModal>
-        <AppModal Title=@AppLocalization["Add Members"] @ref=@AssignMemberModal>
-            <AddMemberModalContent ModelChanged=@((change)=>{AssignMemberModal?.Hide();InvokeAsync(StateHasChanged);}) Group="Group" />
-        </AppModal>
-        <AppModal Title=@AppLocalization["Move To"] @ref=@MoveToModal>
-            @if (MoveToModal?.IsShown == true)
+            <AppModal Title=@AppLocalization["Assign To"] @ref=@AssignToModal>
+                <AssignToModalContent OnGroupMembershipChange=@((change)=>{AssignToModal?.Hide(); InvokeAsync(StateHasChanged);}) DirectoryModel="Group" />
+            </AppModal>
+            <AppModal Title=@AppLocalization["Add Members"] @ref=@AssignMemberModal>
+                <AddMemberModalContent ModelChanged=@((change)=>{AssignMemberModal?.Hide();InvokeAsync(StateHasChanged);}) Group="Group" />
+            </AppModal>
+            <AppModal Title=@AppLocalization["Move To"] @ref=@MoveToModal>
+                @if (MoveToModal?.IsShown == true)
             {
                 <MoveToOUModalContent DirectoryModel="Group" />
             }
@@ -42,15 +43,15 @@
             {
                 <RenameGroupModalContent Group="Group" />
             }
-        </AppModal> 
-        
-     
-          <AppModal Title=@AppLocalization["Change History"] @ref=@ChangeHistoryModal Options=@(new DialogOptions(){FullWidth=true,MaxWidth=MaxWidth.ExtraExtraLarge})>
-                    @if (ChangeHistoryModal?.IsShown == true)
-                    {
-                        <ChangeHistoryModalContent Model="Group" />
-                    }
-                </AppModal>
+        </AppModal>
+
+
+        <AppModal Title=@AppLocalization["Change History"] @ref=@ChangeHistoryModal Options=@(new DialogOptions(){FullWidth=true,MaxWidth=MaxWidth.ExtraExtraLarge})>
+            @if (ChangeHistoryModal?.IsShown == true)
+            {
+                <ChangeHistoryModalContent Model="Group" />
+            }
+        </AppModal>
 
 
         <MudGrid>
@@ -58,10 +59,10 @@
                 <Section Style="min-height:200px;" Title="Group Details">
                     <MudTextField Label="@AppLocalization["Group Name"]" @bind-Value="@Group.CanonicalName" Disabled />
 
-                    <MudTextField Label="@AppLocalization["Account Name"]" @bind-Value="@Group.SamAccountName" Disabled />
+                     <MudTextField Label="@AppLocalization["Account Name"]" @bind-Value="@Group.SamAccountName" Disabled />
 
 
-                    <MudTextField Label="@AppLocalization["Email Address"]" @bind-Value="@Group.Email" Disabled=@(!EditMode || !Group.CanEditField(ActiveDirectoryFields.Mail)) />
+                     <MudTextField Label="@AppLocalization["Email Address"]" @bind-Value="@Group.Email" Disabled=@(!EditMode || !Group.CanEditField(ActiveDirectoryFields.Mail)) />
 
                      <MudStack Row=true>
                          <MudText Typo="Typo.subtitle2">@AppLocalization["Created"]:</MudText>
@@ -79,32 +80,30 @@
 
                         </MudStack>
 
-                       
-                    <MudStack Row=true>
-                        <MudText Typo="Typo.subtitle2">@AppLocalization["OU"]:</MudText>
+
+                        <MudStack Row=true>
+                            <MudText Typo="Typo.subtitle2">@AppLocalization["OU"]:</MudText>
                             <MudSpacer />
 
                             <MudText Style="text-align:end;" Typo="Typo.caption">@Group.OU.ToPrettyOu()</MudText>
                         </MudStack>
 
 
-                </Section>
-            </MudItem>
-            <MudItem xs="12" md="6">
-                <Section Style="min-height:200px;" Title=@AppLocalization["Member Of"]>
-                    <MemberOfList Model="Group" />
+                    </Section>
+                </MudItem>
+                <MudItem xs="12" md="6">
+                    <Section Style="min-height:200px;" Title=@AppLocalization["Member Of"]>
+                        <MemberOfList Model="Group" />
 
-                </Section>
-            </MudItem>
-            <MudItem xs="12" md="12">
-                <Section Style="min-height:200px;" Title=@AppLocalization["Members"]>
-                    <GroupMembersDataGrid Group="Group" />
+                    </Section>
+                </MudItem>
+                <MudItem xs="12" md="12">
+                    <Section Style="min-height:200px;" Title=@AppLocalization["Members"]>
+                        <GroupMembersDataGrid Group="Group" />
 
-                </Section>
-            </MudItem>
-        </MudGrid>
-
-
+                    </Section>
+                </MudItem>
+            </MudGrid>
 
 
 
@@ -116,7 +115,9 @@
 
 
 
-        @if (Group.HasUnsavedChanges)
+
+
+            @if (Group.HasUnsavedChanges)
         {
             <UnsavedChangesPrompt SaveChanges="SaveChanges" DiscardChanges="DiscardChanges" />
         }
@@ -160,8 +161,8 @@
             {
                 jobResults.ShowJobDetailsDialog(MessageService);
             }
-            
-            
+
+
             await InvokeAsync(StateHasChanged);
 
         }
