Improve UX for next button on first step

--- a/BLAZAM/Pages/Groups/CreateGroup.razor
+++ b/BLAZAM/Pages/Groups/CreateGroup.razor
@@ -21,7 +21,7 @@
 
 
 
-                    <MudTextField Label="Group Name" @bind-Value=@newGroupName />
+                    <MudTextField Immediate=true Label="Group Name" @bind-Value=@newGroupName />
 
 
                     
