Don't refresh browse page on directory connection

--- a/BLAZAM/Pages/Browse/Browse.razor
+++ b/BLAZAM/Pages/Browse/Browse.razor
@@ -21,6 +21,6 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        Monitor.OnDirectoryConnectionChanged += (async (status)=> {await InvokeAsync(StateHasChanged); });
+        //Monitor.OnDirectoryConnectionChanged += (async (status)=> {await InvokeAsync(StateHasChanged); });
     }
 }
